--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,11 @@
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
     <title>Hearthstone</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
   </head>
   <body>
+
   <div id='root'></div>
   </body>
 
