--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 
   </head>
   <body>
-  <div id='root' style="height:100%"></div>
+  <div id='root' style="display:flex;flex:1"></div>
   </body>
 
 </html>
